[package]
name = "httpmq-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }
rocksdb = { version = "*", features = ["multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
clap = {version = "*"}
once_cell = {version = "*" }

[profile.release]
debug = true